Salesforce Deployment Dev2/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_State__c</fullName>
        <label>Account State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Formula_Field__c</fullName>
        <formula>AnnualRevenue / 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Picklist_Field__c</fullName>
        <label>Test Picklist Field</label>
        <picklist>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEst 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Test_Record_type</fullName>
        <active>false</active>
        <label>Test Record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Test_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AnnualRevenue  &lt; 2000</errorConditionFormula>
        <errorMessage>Should not be less than 2000</errorMessage>
    </validationRules>
</CustomObject>